[project]
name = "ntt-demo"
version = "0.1.0"
description = "A cross-platform PyQt application with auto-update functionality."
authors = [{ name = "Gemini", email = "gemini@google.com" }]
requires-python = ">=3.9"
dependencies = [
    "pyqt6",
    "requests",
]

[project.scripts]
ntt-demo = "ntt_demo.main:main"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
